# tatlam

./: .env.template  .gitignore  .pre-commit-config 2.yaml  .pre-commit-config.yaml  .swift-format.json  .swiftlint.yml  AGENTS.md  API.txt  CLAUDE.md  Makefile  QUICKSTART_TESTING.md  README.md  TEST_SUITE_SUMMARY.md  TRINITY_DEPLOYMENT_GUIDE.md  app.backup.py  app.py  app.py.save  check_trinity_status.py  config.backup.20250811-1120  config.py  config.py.bak  config_trinity.py  coverage_report.txt  debug_local_llm.py  debug_rules.py  export_json.py  import_gold_md.py  main.py  main_ui.py  pyproject 2.toml  pyproject.toml  pytest.ini  render_cards.py  requirements-dev.txt  requirements-test.txt  requirements.txt  run_batch.py  run_batch_legacy.py  run_batch_new.py  run_engine.sh  (+9 more)
.github/: copilot-instructions.md
.streamlit/: config.toml
core/: brain.py
docs/: ADR-000-structure.md
gold_md/: אדם בוהה בחפץ שנטש – סימני איסוף מודיעין או פיגוע  1d66dba0219180d0b1dff31884829b84.md  אזרח בורח מהתחנה לאחר תשאול ראשוני 1d66dba02191805e8454f37ed9a9168d.md  אזרח בלבוש חריג מתנהג באופן לא צפוי 1d66dba0219180a09a82f5169e1897a4.md  אזרח חוזר שוב ושוב לאזור הכרטוס ומתבונן על עמדת המ 1d66dba0219180fc9a9ad4f4d6773e84.md  אזרח חוסם שערי כניסה מתוך מחאה אישית 1d66dba02191801bb3a0e9de5ed67aa2.md  אזרח טוען שהוא עובד רכבת ומבקש להיכנס דרך דלת צדדי 1d66dba0219180a1a585e1df82689ea2.md  אזרח מנסה להיכנס ליציאת חירום ומסרב לעזוב את המקום 1d66dba0219180a2a5eefa35e0e04e96.md  אזרח נכנס לכניסה צדדית עם בגדי עבודה ללא אישור 1d66dba02191808ab5b3e87e576279d0.md  אזרח עוצר נוסעים בכניסה לרכבת ומבקש תרומות 1d66dba0219180eea4a5c7b3c27426ce.md  אזרחית טוען להטרדה מצד מאבטח ומאיים בפרסום 1d66dba0219180bc829ae4517764f802.md  התמוטטות נוסע ברציף 1d66dba0219180a2910ce012dfd2fe2f.md  חפץ חשוד בתוך קרון 1d66dba0219180f08790ec83be209ca8.md  חפץ חשוד שהוצמד לעגלת קשיש 1d66dba0219180458317d65a451fdba3.md  ניסיון חדירה לחדר תקשורת דרך כניסת תחזוקה צדדית 1d66dba0219180c089cfcded4dc6dc8f.md  סירוב הזדהות תוך ניסיון למשוך קהל נגד המאבטחים 1d66dba0219180cd81f1fae03e12eb9a.md  עימות עם אזרח המנסה להיכנס לקומה הטכנית 1d66dba0219180238ee0cb46adb97144.md  צלם עצמאי מצלם את המאבטחים ומסרב להפסיק 1d66dba0219180b0accbec33cbd9d95d.md  תיק נשכח צמוד למדרגות הנעות 1d66dba02191803cbb61d354270ca9f5.md  תיק עם סמ חים נמצא בתחנה 1d66dba0219180878cb2f5006dccd02b.md
schema/: tatlam_schema.json
scripts/: cleanup_repo.sh  qa_baseline.sh  qa_changed.sh  qa_full.sh  reindex_db.py  start_dashboard.sh  start_flask.sh  start_local_llm.sh  verify_metal.py
tatlam/: __init__.py  categories.py  logging_setup.py  settings.py  simulate.py
templates/: base.html  detail.html  home.html  list.html  submit.html  tatlam_card.md.j2
tests/: README.md  conftest.py  test_api_endpoints.py  test_app_compat.py  test_app_errors.py  test_app_fallback.py  test_app_helpers.py  test_app_html.py  test_app_ready_states.py  test_app_render_fallback_fn.py  test_categories.py  test_export_normalize.py  test_export_render_cli.py  (+11 more)
(+126 files in other folders)
